5347
{code}

Welcome to Scala version 2.10.0-20120504-065643-e52be82eef (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_31).
Type in expressions to have them evaluated.
Type :help for more information.

scala> def foo(a: String*) = a
foo: (a: String*)Seq[String]

scala> foo _
res0: Seq[String] => Seq[String] = <function1>

scala> (foo: Seq[String] => Seq[String])
<console>:9: error: type mismatch;
 found   : String* => Seq[String]
 required: Seq[String] => Seq[String]
              (foo: Seq[String] => Seq[String])
               ^
{code}
